WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180487
Some iOS tests failing after ANGLE update
https://bugs.webkit.org/show_bug.cgi?id=180487
Summary
Some iOS tests failing after ANGLE update
Dean Jackson
Reported
2017-12-06 10:57:01 PST
Some iOS tests failing after ANGLE update
Attachments
Patch
(4.35 KB, patch)
2017-12-06 11:00 PST
,
Dean Jackson
graouts
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-12-06 10:57:37 PST
<
rdar://problem/35885969
>
Dean Jackson
Comment 2
2017-12-06 11:00:20 PST
Created
attachment 328593
[details]
Patch
EWS Watchlist
Comment 3
2017-12-06 11:03:12 PST
Note that there are important steps to take when updating ANGLE. See
http://trac.webkit.org/wiki/UpdatingANGLE
Dean Jackson
Comment 4
2017-12-06 11:43:44 PST
Committed
r225584
: <
https://trac.webkit.org/changeset/225584
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug