Some iOS tests failing after ANGLE update https://bugs.webkit.org/show_bug.cgi?id=180487 <rdar://problem/35885969>

Reviewed by Antoine Quint.

Source/ThirdParty/ANGLE:

The iOS OpenGL compiler doesn't like function declarations with
nameless array parameters. See:
<rdar://problem/35885989> Nameless array parameters in function declaration cause compiler error

While that is being fixed, tell ANGLE's translator to not cull
the names from parameters. This is not a bug in ANGLE, so we won't
fix it upstream at the moment.

* src/compiler/translator/ParseContext.cpp:
(sh::TParseContext::addFunctionPrototypeDeclaration):

LayoutTests:

Unskip some WebGL tests.

* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/196411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225584 268f45cc-cd09-0410-ab3c-d52691b4dbfc