Source/ThirdParty/ANGLE/src/compiler/translator/ParseContext.cpp
@@ -3240,8 +3240,11 @@ TIntermFunctionPrototype *TParseContext::addFunctionPrototypeDeclaration(
     }
     function->setHasPrototypeDeclaration();
 
+    // WebKit note: We currently pass true instead of false for the last parameter
+    // here because some compilers have an issue with nameless parameters in function
+    // declarations.
     TIntermFunctionPrototype *prototype =
-        createPrototypeNodeFromFunction(*function, location, false);
+        createPrototypeNodeFromFunction(*function, location, true);
 
     symbolTable.pop();
 
